--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,15 @@
+/* Global Styles */
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 header {
@@ -42,8 +49,13 @@ header {
     font-size: 0.75rem;
 }
 
+main {
+    flex: 1;
+    padding: 1rem;
+}
+
 .deal {
-    margin: 1rem;
+    margin: 1rem 0;
     text-align: center;
 }
 
@@ -58,7 +70,7 @@ footer {
     background-color: #333;
     color: white;
     width: 100%;
-    position: absolute;
+    position: relative;
     bottom: 0;
 }
 
