--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
 
 header {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
     padding: 1rem;
     background-color: #333;
@@ -24,7 +24,7 @@ header {
 }
 
 .logo {
-    height: 3rem;
+    height: 4rem; /* Increased from 3rem */
     cursor: pointer;
 }
 
@@ -32,6 +32,7 @@ header {
     position: relative;
     display: flex;
     align-items: center;
+    margin-left: auto;
 }
 
 .bell-icon {
@@ -54,7 +55,8 @@ header {
 .hamburger-menu {
     font-size: 2rem;
     cursor: pointer;
-    display: none;
+    display: block;
+    margin-right: 1rem;
 }
 
 .nav-menu {
@@ -147,7 +149,7 @@ footer {
     }
 
     .logo {
-        height: 4rem;
+        height: 5rem; /* Increased from 4rem */
     }
 
     .bell-icon {
